--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shounakmitra13.github.io/Textutils-React",
+  "homepage": "https://shounakmitra13.github.io/Shounak-s-Text-sw",
   "name": "textutils",
   "version": "0.1.0",
   "private": true,
